--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -486,8 +486,8 @@ a {
   align-items: center;
   border-radius: 8px;
   background: transparent;
-  color: #121212;
-  border: 1px solid #121212;
+  color: #05395B;
+  border: 1px solid #05395B;
   font-size: 14px;
   font-weight: 500;
   text-decoration: none;
@@ -501,9 +501,9 @@ a {
   justify-content: center;
   align-items: center;
   border-radius: 8px;
-  background: #22377c;
+  background: #05395B;
   color: white;
-  border: 1px solid #22377c;
+  border: 1px solid #05395B;
   font-size: 14px;
   font-weight: 500;
 }
@@ -513,6 +513,8 @@ a {
   color: #07b8b0;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
+
 
 .nav-item .submenu {
   opacity: 0;
@@ -1002,6 +1004,16 @@ text-decoration: underline;
   min-height: 240px;
 }
 
+.m-top-minus{
+margin-top: -116px !important;
+}
+
+.m-top-img{
+  margin-right: auto !important;
+    margin-left: auto !important;
+    margin-top: -45px !important;
+}
+
 .mh-280 {
   min-height: 280px;
 }
@@ -1050,6 +1062,11 @@ height: 270px;
   background-image: url(/assets/imgs/home/Rectangle4.webp);
   background-position: 0px 115px;
   background-size: contain;
+  background-repeat: no-repeat;
+}
+.bg-img-tooth{
+  background-image: url(/assets/imgs/patient-information/Frame-bg-tooth.webp);
+  background-size: cover;
   background-repeat: no-repeat;
 }
 .bg-col-home {
