--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1614,4 +1614,9 @@ footer hr {
     .m-top-minus{
       margin: 0px !important;
     }
+    h1.fs-32.pe-5.me-5.mb-4.fw-600.blue-color {
+      margin-right: 0px !important;
+      padding-right: 0px !important;
+      line-height: 33px;
+  }
 }
