--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1612,8 +1612,8 @@ footer hr {
         font-size: 14px;
     }
     .m-top-minus{
-      margin: 0px !important;
-    }
+        margin-top: 50px !important;
+      }
     h1.fs-32.pe-5.me-5.mb-4.fw-600.blue-color {
       margin-right: 0px !important;
       padding-right: 0px !important;
