--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -777,6 +777,10 @@ ul .li:hover {
     font-size: 12px;
 }
 
+.fs-14 {
+  font-size: 14px;
+}
+
 .fs-16 {
     font-size: 16px;
 }
@@ -1614,7 +1618,7 @@ footer hr {
     .m-top-minus{
         margin-top: 50px !important;
       }
-    h1.fs-32.pe-5.me-5.mb-4.fw-600.blue-color {
+    .txt-media {
       margin-right: 0px !important;
       padding-right: 0px !important;
       line-height: 33px;
