--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -142,6 +142,7 @@ div#sm-menu {
 input.form-control.searchBar:focus {
     border: none !important;
     background-color: transparent !important;
+    box-shadow: none;
 }
 
 input.form-control.searchBar {
@@ -1416,6 +1417,129 @@ footer hr {
 
 .custom-pagination .page-item.active .page-link {
     border: 1px solid #121212 !important;
+}
+
+.blog-image {
+    max-width: 60%;
+    border-radius: 24px;
+}
+
+.social-media-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 100px;
+    background-color: #FFFFFF;
+}
+
+.social-media-btn svg path {
+    transition: all .3s ease-in-out;
+}
+
+.social-media-btn[data-platform = 'facebook']:hover svg path {
+    fill: #1877F2;
+}
+
+.social-media-btn[data-platform = 'twitter']:hover svg path#fill-twitter {
+    fill: #000000;
+}
+
+.social-media-btn[data-platform = 'pinterest']:hover svg path {
+    fill: #E60023;
+}
+
+.social-media-btn[data-platform = 'linkedin']:hover svg path {
+    fill: #0077B5;
+}
+
+.social-media-btn[data-platform = 'whatsapp']:hover svg path {
+    fill: 	#075E54;
+}
+
+.social-media-btn[data-platform = 'xing']:hover svg path {
+    fill: 	#126567;
+}
+
+.social-media-btn[data-platform = 'telegram']:hover svg path {
+    fill: #0088cc;
+}
+
+#results {
+    position: absolute;
+    background: #f4f4f4;
+    top: 50px;
+    width: 100%;
+    left: 1px;
+    text-align: start;
+    border-radius: 0px 0px 10px 10px;
+}
+
+#results ul {
+    list-style: none;
+    padding: 10px;
+    margin-bottom: 0px;
+}
+
+#results ul li {
+    padding: 10px;
+    margin-bottom: 5px;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: all .3s ease-in-out;
+}
+
+#results ul li p {
+    margin-bottom: 0px;
+}
+
+#results ul li:hover {
+    background-color: #FFFFFF;
+}
+
+.working-hours-block {
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #05395B;
+    padding: 13px;
+    min-width: 227px;
+    max-width: 227px;
+    min-height: 57px;
+    border-radius: 70px;
+    margin: 0px auto -25px auto;
+    z-index: 4;
+    position: relative;
+}
+
+.working-hours-wrapper {
+    min-width: 365px;
+    min-height: 425px;
+    background-color: #CBF2FE;
+    border-radius: 28px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.contact-form-bg {
+    background-image: url(/assets/imgs/contact/bg-1.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contact-form-wrapper {
+    background-color: #F6F7F7;
+    padding: 25px 20px;
+    border-radius: 23px;
+    max-width: 542px;
+    margin: 0px auto;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 @media (max-width: 1650px) {
