--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -171,9 +171,18 @@ box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
 }
 
 .bt-style {
-    border: 1px solid;
-    background: #fff;
-    width: 45%;
+    border: 1px solid #121212;
+    background: #FFFFFF;
+    padding: 15px 30px;
+    color: #121212;
+    font-size: 16px;
+    font-weight: 600;
+    transition: all .3s ease-in-out ;
+}
+.bt-style:hover {
+    color: #121212;
+    background: #FFFFFF;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 .card-white {
     background: #fff;
@@ -1214,13 +1223,17 @@ footer hr {
 }
 
 .custom-input {
-    border: none;
+    border: 1px solid transparent;
     min-height: 45px;
     box-shadow: none;
+    width: 100%;
+    background-color: #FFFFFF;
+    transition: all .3s ease-in-out;
 }
 
 .custom-input:focus {
     box-shadow: none;
+    border: 1px solid #000000;
 }
 
 .bg-gray-3 {
