--- a/public/assets/css/lightbox.css
+++ b/public/assets/css/lightbox.css
@@ -119,7 +119,7 @@ body.lb-disable-scrolling {
 }
 
 .lb-nav a.lb-next {
-  width: 64%;
+  width: 10%;
   right: 0;
   float: right;
   background: url(/assets/imgs/next.png) right 48% no-repeat;
@@ -129,6 +129,8 @@ body.lb-disable-scrolling {
   -moz-transition: opacity 0.6s;
   -o-transition: opacity 0.6s;
   transition: opacity 0.6s;
+  background-repeat: no-repeat !important;
+  margin-top: 45%;
 }
 
 .lb-nav a.lb-next:hover {
