--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1347,29 +1347,35 @@ footer hr {
 
 .search-input-wrapper {
     background-color: #ffffff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
     border-radius: 14px;
     padding-left: 15px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
         rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
-.search-input-wrapper input {
+.search-input-wrapper form {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search-input-wrapper form input {
     border: none;
     outline: none;
     color: #121212;
     font-size: 16px;
     max-height: 100%;
+    width: 100%;
 }
 
-.search-input-wrapper input::placeholder {
+.search-input-wrapper form input::placeholder {
     color: #121212;
     font-size: 16px;
 }
 
-.search-input-wrapper a {
+.search-input-wrapper form button {
     font-size: 16px;
     color: #ffffff;
     text-decoration: none;
@@ -1377,6 +1383,8 @@ footer hr {
     border-radius: 14px;
     background-color: #05395b;
     padding: 20px 30px;
+    border: none;
+    outline: none;
 }
 
 .page-bg-image {
