--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -991,6 +991,11 @@ ul .li:hover {
 margin-top: -116px !important;
 }
 
+.m-top-minus2{
+    margin-top: -240px !important;
+    }
+    
+
 .m-t-m-105{
     margin-top: -105px;
 }
@@ -1549,35 +1554,46 @@ footer hr {
 }
 
 .working-hours-block {
-    color: #FFFFFF;
+    color: #05395B;
     text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    background-color: #05395B;
+    font-size: 18px;
+    font-weight: 600;
+    background-color: #ffffff;
     padding: 13px;
-    min-width: 227px;
-    max-width: 227px;
-    min-height: 57px;
+    min-height: 227px;
+    max-height: 227px;
+    min-width: 57px;
     border-radius: 70px;
-    margin: 0px auto -25px auto;
+    margin: 0px 0px -13px 66px;
     z-index: 4;
     position: relative;
-}
-
-.working-hours-wrapper {
-    min-width: 365px;
-    min-height: 425px;
-    background-color: #CBF2FE;
-    border-radius: 28px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
 }
 
+.working-hours-wrapper {
+    min-width: 365px;
+    min-height: 400px;
+    background-color: #CBF2FE;
+    border-radius: 0px 18px 18px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 0px 14px -6px, rgba(0, 0, 0, 0.3) 0px 0px 8px -1px;
+}
+.contact-dark{
+    min-width: 900px;
+    min-height: 400px;
+    background-color: #05395B;
+    border-radius: 18px 0px 0px 18px;
+}
 .contact-form-bg {
-    background-image: url(/assets/imgs/contact/bg-1.webp);
+    background-image: url(/assets/imgs/contact/background.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1841,4 +1857,42 @@ footer hr {
   .video-size{
     min-height: 200px !important;
   }
+  
+.working-hours-wrapper {
+    min-width: 400px;
+    min-height: 400px;
+    background-color: #CBF2FE;
+    border-radius: 0px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px !important;
+    margin-top: 50px !important;
+    padding-top: 15px;
+  }
+  .contact-dark{
+    min-width: 200px !important;
+    min-height: 400px;
+    background-color: #05395B;
+    border-radius: 0px !important ;
+    border-radius: 10px !important;
+}
+
+.working-hours-block {
+    min-width: 227px;
+    max-width: 227px;
+    min-height: 57px;
+    margin: -50px 0px 300px 120px;
+    z-index: 1;
+    position: relative;
+    writing-mode: horizontal-tb;
+    text-orientation: mixed;
+    background-color: #05395B;
+    color: #FFFFFF;
+
+}
+.size-media{
+    justify-content: flex-start !important;
+    margin-top: 0px !important;
+}
 }
