--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -994,7 +994,7 @@ margin-top: -116px !important;
 .m-top-minus2{
     margin-top: -240px !important;
     }
-    
+
 
 .m-t-m-105{
     margin-top: -105px;
@@ -1614,12 +1614,45 @@ footer hr {
     margin: 0 auto;
 }
 
+#acc-tools-wrapper {
+    max-width: 220px;
+}
+
 #accessibility-controls {
     position: absolute;
     background-color: #ffffff;
     padding: 15px;
     border-radius: 20px;
     z-index: 9;
+    top: 30px;
+    left: 0px;
+    opacity: 0;
+    visibility: hidden;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    transition: all 0.2s ease-in-out;
+}
+
+#acc-tools-wrapper:hover #accessibility-controls{
+    opacity: 1;
+    visibility: visible;
+}
+
+#accessibility-controls button {
+    display: flex;
+    align-items: center;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    width: 100%;
+    text-align: left;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 16px;
+    transition: all .2s ease-in-out;
+}
+
+#accessibility-controls button:hover {
+    background-color: #ededed;
 }
 
 @media (max-width: 1650px) {
@@ -1880,7 +1913,7 @@ footer hr {
   .video-size{
     min-height: 200px !important;
   }
-  
+
 .working-hours-wrapper {
     min-width: 380px;
     min-height: 400px;
