--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -162,6 +162,10 @@ input.form-control.searchBar {
     color: #07b8b0;
 }
 
+.soft-green-1 {
+    color: #025e5a;
+}
+
 .shadow-bg-layer {
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
 }
@@ -680,6 +684,10 @@ ul .li:hover {
 
 .gray-color-1 {
     color: #666b68;
+}
+
+.gray-color-2 {
+    color: #505552;
 }
 
 .line-1 {
