--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1615,6 +1615,22 @@ footer hr {
     justify-content: flex-start;
     align-items: flex-end;
 }
+
+.meet-us-banner {
+    min-height: 75vh;
+    width: 100%;
+    position: relative;
+    border-radius: 35px;
+    background-image: url(/assets/imgs/meet-us/banner.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 50px;
+ 
+}
+
+
+
 @media (max-width: 1650px) {
     .sec-banner.services-pages {
         height: 700px;
